@@ -108,10 +108,10 @@ CONFIG_LPC17_ETHERNET=n
 CONFIG_LPC17_USBHOST=n
 CONFIG_LPC17_USBOTG=n
 CONFIG_LPC17_USBDEV=n
-CONFIG_LPC17_UART0=y
+CONFIG_LPC17_UART0=n
 CONFIG_LPC17_UART1=n
 CONFIG_LPC17_UART2=n
-CONFIG_LPC17_UART3=n
+CONFIG_LPC17_UART3=y
 CONFIG_LPC17_CAN1=n
 CONFIG_LPC17_CAN2=n
 CONFIG_LPC17_SPI=n
@@ -148,10 +148,10 @@ CONFIG_LPC17_GPDMA=n
 # CONFIG_UARTn_PARTIY - 0=no parity, 1=odd parity, 2=even parity
 # CONFIG_UARTn_2STOP - Two stop bits
 #
-CONFIG_UART0_SERIAL_CONSOLE=y
+CONFIG_UART0_SERIAL_CONSOLE=n
 CONFIG_UART1_SERIAL_CONSOLE=n
 CONFIG_UART2_SERIAL_CONSOLE=n
-CONFIG_UART3_SERIAL_CONSOLE=n
+CONFIG_UART3_SERIAL_CONSOLE=y
 
 CONFIG_UART0_TXBUFSIZE=256
 CONFIG_UART1_TXBUFSIZE=256
